# qa_guru_python_4_18

api-tests/: api_test.py  pyproject.toml  pytest.ini
api-tests/api_tests_reqres_in/helpers/: request_bodies.py  urls.py
api-tests/api_tests_reqres_in/tools/: tools.py
api-tests/schemas/: reqres.py
